<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:hint="@string/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:hint="@string/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/first_name"
        android:layout_below="@id/password"
        android:hint="@string/f_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/last_name"
        android:layout_below="@id/first_name"
        android:hint="@string/l_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/email_address"
        android:layout_below="@id/last_name"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signup"
        android:layout_below="@id/email_address"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</android.widget.RelativeLayout>